--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@slidev/parser": "^0.35.2",
     "@slidev/theme-default": "^0.21.2",
     "clsx": "^1.2.1",
-    "dom-to-image-more": "^2.11.1",
+    "dom-to-image": "^2.6.0",
     "markdown-it": "^13.0.1",
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
