--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-media-recorder": "^1.6.6",
+    "react-resizable": "^3.0.4",
     "react-use": "^17.3.2"
   },
   "devDependencies": {
